<resources>
    <string name="app_name">Calculadora</string>
    <string name="todo">TODO</string>
    <string name="c">C</string>
    <string name="porcent">%</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="point">.</string>
    <string name="adição">+</string>
    <string name="subtração">-</string>
    <string name="igualdade">=</string>
    <string name="divisão">/</string>
    <string name="multiplicação">X</string>
    <string name="parenteses">( )</string>
    <string name="oo">--</string>
    <string name="apagarr"><![CDATA[<]]></string>
</resources>