<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/conta"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:textColor="@color/black"
        android:textSize="65sp"
        android:gravity="end"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:padding="10dp"
        android:gravity="end"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"/>


    <TextView
        android:id="@+id/limpar"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_operadores"
        android:text="@string/c"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
            android:id="@+id/parenteses"
            style="@style/botaoOperador"
            android:textColor="@color/white"
            android:background="@drawable/bordas_operadores"
            android:text="@string/parenteses"
        android:layout_width="90dp"
        android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"/>


    <TextView
        android:id="@+id/porcentagem"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_operadores"
        android:text="@string/porcent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/divisao"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_operadores"
        android:text="@string/divisão"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/sete"
        style="@style/botaoOperador2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_7"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/oito"
        style="@style/botaoOperador2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/nove"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/multiplicar"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_operadores"
        android:text="@string/multiplicação"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/quatro"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_4"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/cinco"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/seis"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_6"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/somar"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_operadores"
        android:text="@string/adição"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/dois"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_2"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/tres"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_3"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.667"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/subtrair"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_operadores"
        android:text="@string/subtração"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
            android:id="@+id/ponto"
            style="@style/botaoOperador"
            android:background="@drawable/bordas_arredondadas"
            android:text="@string/point"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.991"/>

        <TextView
            android:id="@+id/zero"
            style="@style/botaoOperador"
            android:background="@drawable/bordas_arredondadas"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.991"/>

        <TextView
            android:id="@+id/apagar"
            style="@style/botaoOperador"
            android:background="@drawable/bordas_arredondadas"
            android:scaleType="center"
            android:text="@string/apagarr"
            android:textColor="@color/black"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.991"/>

    <TextView
        android:id="@+id/igual"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_operadores"
        android:text="@string/igualdade"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <TextView
        android:id="@+id/um"
        style="@style/botaoOperador"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/bordas_arredondadas"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>